# covidtimes

./: README.md  data.py  main.py  pyproject.toml  replit_zip_error_log.txt
assets/css/: main.css
site/: index.html
