[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
cinemagoer = "^2022.2.11"
Flask = "^2.1.1"
imdb-cli-tool = "^1.0.1"
HTMLParser = "^0.0.2"
tmdbv3api = "^1.7.6"
pymongo = "^4.1.1"
Flask-Session = "^0.4.0"
waitress = "^2.1.1"
requests = "^2.27.1"
GoogleNews = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"